# JobCardAPP

./: job_cards.db  jobcard_client.py  login.py  main.py  pyproject.toml  sidebar.py
